# Speed-comparison-of-some-QP-solvers

./: CMakeLists.txt  README.md  Timer.hpp
MPC/: MpcControl.cpp  MpcControl.hpp
MPC/qpOASES/: VERSIONS  VERSIONS.txt
MPC/qpOASES/src/: Utils.cpp
examples/: acadosTest.cpp  hpipmTest.cpp  mpcTest.cpp
